@@ -3,6 +3,7 @@ libece X.Y ():
 	  {cacaert,cert,key}2 => op_{ca,cert,key}
 	- bindings: fix typo in sb_conf_get_vpn_ip()
 	- sbsim/contrib: produce and test OpenVPN server
+	- config: fix debug messages not being displayed
 
 libece 0.4 (31/10/2013):
 	- new host names: initialization-host, operation-host
